2007-02-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: By default, do not import an existing
	configuration file.  In most cases, this is now an annoyance
	rather than a convenience as it overrides the --prefix=xxx and
	--with-layout=yyy options.
	* configure: Regenerated.

2007-02-19  David Ayers  <ayers@fsfe.org>

	* GNUmakefile.in (uninstall:): Remove print_unique_pathlist.sh,
	filesystem.sh, filesystem.csh and gnustep-config.  Remove
	GNUSTEP_TARGET_LDIR.  Reorder removed directories according
	to reverse order of installation.  Only remove existing directories.
	Remove obsolete comment.

	* common.make (TRANSFORM_PATHS_SCRIPT): Remove obsolete variable.
	
2007-02-19  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/install.texi: Rewritten large parts to describe
	the new installation and configuration process.
	* INSTALL: Regenerated.
	
2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config-noarch.make.in: Removed the deprecation warnings added
	earlier today, because in some situations they seem to be
	triggered spuriously (Reported by Fred Kiefer).

2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* rules.make (.PHONY): Added declaration of new
	print-gnustep-make-* targets as PHONY.

2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* empty.make: Added file that was missing in past commit.

2007-02-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	Updated rpm building code, and removed separate debug packages.
	* GNUmakefile.in (MAKE_FILES): Removed spec-debug-rules.template.
	* spec-debug-rules.template: File removed.
	* Master/rpm.make (internal-after-install): Use DESTDIR instead of
	INSTALL_ROOT_DIR.  Enhanced sed expression to only remove DESTDIR
	from the beginning of paths.
	($(PACKAGE_NAME)-debug.spec.in): Rule removed.
	($(SPEC_FILE)): Do not set %gs_root.  Set %gs_install_domain
	instead of %gs_install_dir.  Set %gs_makefiles.  Do not append